<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="30sp"
        android:textColor="#ffa500"
        android:textStyle="bold|italic"
        android:layout_marginTop="200dp"
        tools:ignore="RtlCompat" />
    <EditText
        android:id="@+id/emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_id"
        android:textColor="#000000"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#000000"/>
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="#ffffff"
        android:text="@string/log_in"
        android:onClick="login"
        android:textStyle="italic|bold"
        android:textSize="20sp"
        android:background="@drawable/roundbutton"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerbutton"
        android:text="@string/dont"
        android:textColor="#ffa500"
        android:textSize="20sp"
        android:onClick="signup"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:gravity="center_horizontal" />
</LinearLayout>